fixed schedule times getting squished on small viewports

--- a/Web/css/booked.css
+++ b/Web/css/booked.css
@@ -1084,7 +1084,6 @@ table.reservations {
   border-collapse: collapse;
   width: 100%;
   font-size: .85em;
-  table-layout: fixed;
   border: solid #36648B 1px;
 }
 table.reservations.mobile {
