--- a/Web/css/less/schedule.less
+++ b/Web/css/less/schedule.less
@@ -5,7 +5,6 @@ table.reservations {
   border-collapse: collapse;
   width: 100%;
   font-size: .85em;
-  table-layout: fixed;
   border: solid #36648B 1px;
 }
 
